@@ -958,9 +958,9 @@ the UNIX methods.
 
 <h5><a name="unix_autoconf">Building ACE with GNU Autoconf</a></h5>
 <p>
-GNU Autoconf support is available in the ACE only distribution in the
-DOC group website. More, precisely support for Autoconf will be
-missing in distributions that have TAO and CIAO bundled along.
+GNU Autoconf support is available in the ACE and ACE+TAO distributions
+in the DOC group website. More, precisely support for Autoconf will be
+missing in distributions that have CIAO bundled along.
 
 GNU Autoconf support has been partially present in a number of ACE
 versions. However, ACE 5.4 was the first version that supported it in
@@ -973,10 +973,10 @@ appreciated. Please send any fixes to the
 <a href="mailto:ace-users@cs.wustl.edu">ACE users</a> mailing list
 using the standard <a href="PROBLEM-REPORT-FORM">problem-report-form</a>.</p>
 <p>
-The ACE only kit has been bootstrapped so you do not need to install
-the GNU Autotools (autoconf, automake, libtool) unless you want to
-participate in testing and developing this process further. To simply
-configure and build ACE, do:
+The kit has been bootstrapped so you do not need to install the GNU
+Autotools (autoconf, automake, libtool) unless you want to participate
+in testing and developing this process further. To simply configure
+and build ACE, do:
 </p><ol>
   <li><code>cd</code> to the top-level <code>ACE_wrappers</code> directory.</li>
   <li>Create a subdirectory to hold your build's configuration and built
@@ -2925,7 +2925,7 @@ from
 <EM><br> -->
 
 <!-- hhmts start -->
-Last modified: Wed Aug 25 11:18:59 PDT 2004
+Last modified: Sun Jan  9 19:48:58 PST 2005
 <!-- hhmts end -->
 
 
